[package]
name = "fplist"
version = "0.2.1"
authors = ["Alex M. M. <acdenissk69@gmail.com>"]
edition = "2018"
description = "An immutable, persistent, singly-linked list"
repository = "https://github.com/acdenisSK/fplist"
license = "MIT"

[dev-dependencies]
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
optional = true

[features]
multithreaded = []
serde_impls = ["serde"]
